# arua-iced-component

./: Cargo.toml  README.md
crates/iced-component/: Cargo.toml
crates/iced-component/examples/: button_demo.rs
crates/iced-component/src/: button.rs  component.rs  lib.rs  motion.rs  theme.rs
crates/iced-component/src/button/: animated.rs  flags.rs  iced.rs  icon.rs  motion.rs  style.rs
crates/iced-component/src/component/: context.rs
crates/iced-component/src/motion/: preferences.rs  spring.rs  tokens.rs  transition.rs
crates/iced-component/src/theme/: context.rs  error.rs  pack.rs  surface.rs
crates/iced-component/themes/: adwaita-light.toml
