[package]
name = "iced-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-anim-core.workspace = true
spectrum-theme = { workspace = true, features = ["macros"] }
spectrum-schema.workspace = true
spectrum-resolver.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
float-cmp.workspace = true

[features]

[lints]
workspace = true
